--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "mcmis/base" : "0.5.*"
+        "mcmis/base" : "0.5.*",
+        "mcmis/plugin-localizer" : ">=0.3 <1.1",
+        "mcmis/template" : ">=0.3 <1.5"
     },
     "autoload": {
         "psr-4": {
