--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.5.9",
         "mcmis/base" : "0.5.*",
-        "mcmis/template" : ">=0.3 <1.5"
+        "mcmis/template" : "0.5.*"
     },
     "autoload": {
         "psr-4": {
