Dependencies must be greater than or equals 0.5

--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,13 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "mcmis/base" : "0.5.*",
-        "mcmis/plugin-localizer" : ">=0.3 <1.1",
-        "mcmis/template" : ">=0.3 <1.5"
+        "mcmis/base" : ">=0.5",
+        "mcmis/plugin-localizer" : ">=0.3",
+        "mcmis/template" : ">=0.5"
     },
     "autoload": {
         "psr-4": {
             "MCMIS\\Support\\": "src/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.8.x-dev"
         }
     }
 }
