--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,12 @@
     "require": {
         "php": ">=5.5.9",
         "mcmis/base" : "0.5.*",
-        "mcmis/template" : "0.5.*"
+        "mcmis/template" : "0.5.*",
+        "mcmis/plugin-complainprint" : "0.5.*"
     },
     "autoload": {
         "psr-4": {
             "MCMIS\\Support\\": "src/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.8.x-dev"
         }
     }
 }
